# delta-sharing-iceberg-server

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
client/: pyproject.toml
client/scripts/: download_jars.py  test_client.py
server/: .env.local.example  config.yaml  main.py  pyproject.toml
server/app/api/admin/: __init__.py  audit_logs.py  (+7 more)
server/app/core/: __init__.py  admin_auth.py  audit.py  authentication.py  cache.py  config.py  cos_client.py  database.py  delta_capabilities.py  dlc_client.py  errors.py  logging_config.py  request_size_limit.py  security.py
server/app/models/: __init__.py  profile.py  query.py  share.py
server/app/repositories/: admin_user_repository.py  recipient_repository.py  recipient_share_repository.py  share_repository.py  token_repository.py  version_repository.py
server/app/routes/: __init__.py  health.py  metadata.py  query.py  shares.py  version.py
server/app/services/: __init__.py  authorization_service.py  iceberg_service.py  predicate_service.py  recipient_service.py  share_service.py  table_service.py  token_service.py  version_service.py
server/app/utils/: audit_utils.py  page_token_utils.py  request_utils.py  response_utils.py  time_utils.py
server/scripts/: ini_data.py  init_admin.py  setup_env.ps1  setup_env.sh
server/tests/: conftest.py  test_audit.py  test_audit_utils.py  test_authz.py  test_cache.py  test_core.py  test_delta_capabilities.py  test_dlc_client.py  test_page_token_utils.py  test_predicate_service.py  test_query_db_efficiency.py  test_recipient_share_repository.py  test_routes.py  test_schema_asset.py  test_time_utils.py  test_version.py
server/tests/benchmarks/: db_query_benchmark.py  query_benchmark.py
(+56 files in other folders)
