[project]
name = "delta-sharing-iceberg-server"
version = "0.1.0"
description = "Delta Sharing Server for Iceberg Tables"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pyiceberg>=0.5.0",
    "cos-python-sdk-v5>=1.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "avro>=1.11.0",
    "tencentcloud-sdk-python>=3.1.76",
    "loguru>=0.7.3",
    "fastavro>=1.12.2",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
